fixed overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,6 +48,7 @@ body {
     border-radius: 15px;
     justify-content: center;
     border: 2px solid black;
+    padding-left: 10px;
 }
 #prevNum, #currentSelection {
     display: flex;
@@ -57,6 +58,7 @@ body {
 #currentSelection {
     font-size: 25px;
     font-weight: bold;
+    overflow: hidden;
 }
 .buttons {
     display: grid;
